--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Welcome to <span class="green">GYM</span><span class="red">NATION</span> 💪</div>
+    <div class="logo">Welcome <span class="green">GYM</span><span class="red">NATION</span> 💪</div>
   </header>
   <main>
     <h1>YOU ARE SUCCESSFULLY LOGGED IN!</h1>
