Modified Platinum package

--- a/Frontend/platinumpage.html
+++ b/Frontend/platinumpage.html
@@ -4,13 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Platinum Package - Gym</title>
-  
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Font Awesome CDN for Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..."
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
 <body>
-  <h1>Platinum Package</h1>
+  <h1 class="royal-heading">
+  <i class="fas fa-crown"></i> Platinum Package
+</h1>
+
   <div class="container">
     <!-- Merchandise Card -->
     <div class="card">
+      <div class="icon">
+        <i class="fas fa-shopping-bag"></i>
+      </div>
       <h2>Exclusive Merchandise</h2>
       <p>
         Enjoy premium gym apparel, accessories, and branded gear available only to Platinum members. Get monthly drops and discounts on new arrivals.
@@ -20,6 +34,9 @@
 
     <!-- Instructors Card -->
     <div class="card">
+      <div class="icon">
+        <i class="fas fa-user-tie"></i>
+      </div>
       <h2>Elite Instructors</h2>
       <p>
         Get access to one-on-one sessions with top-tier fitness instructors. Customized plans, check-ins, and progress tracking included.
@@ -29,6 +46,9 @@
 
     <!-- Remote Workouts Card -->
     <div class="card">
+      <div class="icon">
+        <i class="fas fa-laptop"></i>
+      </div>
       <h2>Remote Workouts</h2>
       <p>
         Join live and on-demand virtual workout sessions anytime, anywhere. Includes yoga, HIIT, strength, and more—tailored to your level.
