--- a/Frontend/platinumpage.html
+++ b/Frontend/platinumpage.html
@@ -21,7 +21,7 @@
 
   <div class="container">
     <!-- Merchandise Card -->
-    <div class="card">
+    <div class="card" onclick="openModal('merchandiseModal')">
       <div class="icon">
         <i class="fas fa-shopping-bag"></i>
       </div>
@@ -31,6 +31,7 @@
       </p>
       <button class="btn">Shop Now</button>
     </div>
+    
 
     <!-- Instructors Card -->
     <div class="card">
