--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,7 +20,9 @@
  
   <section class="hero">
     <div class="overlay">
+      <a href="signup.html">
       <button class="cta-button">JOIN US</button>
+      </a>
     </div>
   </section>
 
@@ -43,7 +45,6 @@
     </div>
   </section>
 
-  <!-- Packages Section -->
   <section class="packages-section">
     <h2>Our Packages</h2>
     <div class="packages-container">
@@ -55,10 +56,12 @@
         <h3>Premium</h3>
         <p>Includes group classes and access to premium areas.</p>
       </div>
-      <div class="package-card package-platinum">
-        <h3>Platinum</h3>
-        <p>Personal trainer,gym merch, house calls,intructor of your choice</p>
-      </div>
+     <a href="platinumpage.html" class="card-link">
+  <div class="package-card package-platinum">
+    <h3>Platinum</h3>
+    <p>Personal trainer, gym merch, house calls, instructor of your choice</p>
+  </div>
+</a>
     </div>
   </section>
 </body>
