--- a/Frontend/platinumpage.html
+++ b/Frontend/platinumpage.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Platinum Package - Gym</title>
-  
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Platinum Package</h1>
+
   <div class="container">
-    <!-- Merchandise Card -->
     <div class="card">
       <h2>Exclusive Merchandise</h2>
       <p>
@@ -18,7 +18,6 @@
       <button class="btn">Shop Now</button>
     </div>
 
-    <!-- Instructors Card -->
     <div class="card">
       <h2>Elite Instructors</h2>
       <p>
@@ -27,7 +26,6 @@
       <button class="btn">Meet Coaches</button>
     </div>
 
-    <!-- Remote Workouts Card -->
     <div class="card">
       <h2>Remote Workouts</h2>
       <p>
