--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -59,8 +59,7 @@
   </div>
 
   <script>
-    // Simulating dynamic username (replace with real logic)
-    const username = "John"; // Replace with dynamic value
+    const username = localStorage.getItem("loggedInUser") || "Guest";
     document.getElementById('username').textContent = username;
   </script>
 </body>
