UPDATED IN reference to Ronel's Changes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,7 +20,8 @@
  
   <section class="hero">
     <div class="overlay">
-      <button class="cta-button">JOIN US</button>
+        <button class="cta-button" onclick="window.location.href='signup.html'">JOIN US</button>
+
     </div>
   </section>
 
@@ -43,17 +44,16 @@
     </div>
   </section>
 
-  <!-- Packages Section -->
   <section class="packages-section">
-    <h2>Our Packages</h2>
+    <h2>Our GYMNATION Packages</h2>
     <div class="packages-container">
       <div class="package-card package-regular">
         <h3>Regular</h3>
-        <p>Basic gym access and standard equipment.</p>
+        <p>Basic gym access and standard equipment</p>
       </div>
       <div class="package-card package-premium">
         <h3>Premium</h3>
-        <p>Includes group classes and access to premium areas.</p>
+        <p>instructor booking and full gym access</p>
       </div>
       <div class="package-card package-platinum">
         <h3>Platinum</h3>
@@ -61,5 +61,14 @@
       </div>
     </div>
   </section>
+  <footer class="site-footer">
+    <div class="footer-container">
+      <h3>About Us</h3>
+      <p>GYMNATION is dedicated to providing top-tier fitness experiences</p>
+    
+      <p>Contact us at: info@gymnation.com | Phone: +254718851313</p>
+    </div>
+  </footer>
+  
 </body>
 </html>
