Better message or fix

--- a/Frontend/platinumpage.html
+++ b/Frontend/platinumpage.html
@@ -5,15 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Platinum Package - Gym</title>
   <link rel="stylesheet" href="styles.css" />
+  
 </head>
 <body>
-  <h1>Platinum Package</h1>
+
+  <header>
+    <h2>Welcome, <span id="platinumUser">Platinum Member</span> 👑</h2>
+    <button class="logout-btn" onclick="logout()">Log Out</button>
+  </header>
+
+  <h1 style="margin-top: 20px;">Platinum Package</h1>
 
   <div class="container">
     <div class="card">
       <h2>Exclusive Merchandise</h2>
       <p>
-        Enjoy premium gym apparel, accessories, and branded gear available only to Platinum members. Get monthly drops and discounts on new arrivals.
+        Enjoy premium gym apparel, accessories, and branded gear available only to Platinum members.
+        Get monthly drops and discounts on new arrivals.
       </p>
       <button class="btn" id="shopNowBtn">Shop Now</button>
     </div>
@@ -47,7 +55,8 @@
     <div class="card">
       <h2>Elite Instructors</h2>
       <p>
-        Get access to one-on-one sessions with top-tier fitness instructors. Customized plans, check-ins, and progress tracking included.
+        Get access to one-on-one sessions with top-tier fitness instructors.
+        Customized plans, check-ins, and progress tracking included.
       </p>
       <button class="btn" id="meetCoachesBtn">Meet Coaches</button>
     </div>
@@ -121,11 +130,40 @@
     <div class="card">
       <h2>Remote Workouts</h2>
       <p>
-        Join live and on-demand virtual workout sessions anytime, anywhere. Includes yoga, HIIT, strength, and more—tailored to your level.
+        Join live and on-demand virtual workout sessions anytime, anywhere.
+        Includes yoga, HIIT, strength, and more—tailored to your level.
       </p>
       <button class="btn">Start Training</button>
     </div>
   </div>
+
+
+  <script>
+    const username = localStorage.getItem("loggedInUser");
+    const userId = localStorage.getItem("loggedInID");
+
+    if (!username || !userId) {
+      // Not logged in, send to login page
+      window.location.href = "login.html";
+    } else {
+      const userData = JSON.parse(localStorage.getItem(userId));
+
+      if (!userData || userData.package !== "Platinum") {
+        alert("Access restricted to Platinum members only.");
+        window.location.href = "login.html";
+      } else {
+        document.getElementById("platinumUser").textContent = username;
+      }
+    }
+
+    function logout() {
+      localStorage.removeItem("loggedInUser");
+      localStorage.removeItem("loggedInID");
+      window.location.href = "login.html";
+    }
+  </script>
+
+=======
   <script>
     document.getElementById('shopNowBtn').addEventListener('click', function () {
       const imageSection = document.getElementById('shopImages');
@@ -137,5 +175,6 @@
       coachSection.style.display = 'block';
     });
   </script>
+
 </body>
 </html>
