--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -34,13 +34,20 @@
     document.getElementById('loginForm').addEventListener('submit', function(e){
       e.preventDefault();
       const memberId = document.getElementById('memberId').value.trim();
-      const name = localStorage.getItem(memberId);
-
+      const storedData = localStorage.getItem(memberId);
       const loginMsg = document.getElementById('loginMsg');
-      if(name) {
+
+      if (storedData) {
+        const user = JSON.parse(storedData);
+        localStorage.setItem("loggedInUser", user.name);
+        localStorage.setItem("loggedInID", memberId);
+
         loginMsg.style.color = 'green';
-        loginMsg.textContent = `Welcome back, ${name}!`;
-        // Redirect or show logged-in content here
+        loginMsg.textContent = `Welcome back, ${user.name}!`;
+
+        setTimeout(() => {
+          window.location.href = "dashboard.html";
+        }, 1000);
       } else {
         loginMsg.style.color = 'red';
         loginMsg.textContent = 'Invalid Membership ID. Please try again.';
